# fotobot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml.example  fotobot.service.example
.github/workflows/: release.yml
locales/: en.yml  zh-CN.yml
src/: exif.rs  main.rs
